Changed divide algorithm